--- a/client/package.json
+++ b/client/package.json
@@ -1,24 +1,18 @@
 {
-  "name": "moodify-client",
-  "private": true,
+  "name": "mood-playlist-client",
   "version": "1.0.0",
-  "type": "module",
-"scripts": {
-  "dev": "vite",
-  "build": "vite build",
-  "predeploy": "npm run build",
-  "deploy": "gh-pages -d dist"
-},
+  "private": true,
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.20",
-    "gh-pages": "^6.3.0",
-    "postcss": "^8.4.41",
-    "tailwindcss": "^3.4.10",
-    "vite": "^5.4.1"
+    "@vitejs/plugin-react": "^4.2.0",
+    "vite": "^5.2.0"
   }
 }
