--- a/server/.env.example
+++ b/server/.env.example
@@ -1,6 +1,8 @@
-PORT=5000
-CLIENT_URL=http://localhost:5173
+# Back-end environment
+# On Render, set these in the dashboard (do not commit real secrets)
+CLIENT_URL=https://your-frontend.vercel.app
 
 SPOTIFY_CLIENT_ID=your_spotify_client_id
 SPOTIFY_CLIENT_SECRET=your_spotify_client_secret
-SPOTIFY_REDIRECT_URI=http://localhost:5000/callback
+# IMPORTANT: Must exactly match what's in Spotify dashboard
+SPOTIFY_REDIRECT_URI=https://your-backend.onrender.com/callback
