--- a/client/package.json
+++ b/client/package.json
@@ -8,15 +8,15 @@
     "build": "vite build",
     "preview": "vite preview"
   },
+  "devDependencies": {
+  "@vitejs/plugin-react": "^4.2.0",
+  "vite": "^5.2.0"
+  },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-react": "^4.2.0",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6",
+    "react-dom": "^18.2.0",
     "tailwindcss": "^4.1.12",
-    "vite": "^5.2.0"
+    "postcss": "^8.5.6",
+    "autoprefixer": "^10.4.21"
   }
 }
